# rust-lambda-call-python-lambda

./: Cargo.toml  README.md
src/: main.rs
