[package]
name = "rust-lambda-call-python-lambda"
version = "0.1.0"
authors = ["TAKEDA-Takashi <takeda.takashi0308@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lamedh_runtime = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusoto_core = "0.46"
rusoto_lambda = "0.46"
log = "0.4"
env_logger = "0.8"
